cmake_minimum_required(VERSION 3.6)
project(CPrimerPlus6E)

set(CMAKE_C_STANDARD 99)

#ch01
set(SOURCE_FILE_LISTING1    Ch01/listing1.c)
add_executable(listing1 ${SOURCE_FILE_LISTING1})

set(SOURCE_FILE_LISTING2    Ch01/listing2.c)
add_executable(listing2 ${SOURCE_FILE_LISTING2})


set(SOURCE_FILE_INFORM    Ch01/inform.c)
add_executable(inform ${SOURCE_FILE_INFORM})

#ch02


